load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project()

haskell_library(
    name = "hs-toxcore-c",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    version = "0.2.12",
    visibility = ["//visibility:public"],
    deps = [
        "//c-toxcore",
        "//hs-msgpack-binary",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:generic-arbitrary",
        "//third_party/haskell:quickcheck-instances",
    ],
)

hspec_test(
    name = "testsuite",
    timeout = "short",
    deps = [
        ":hs-toxcore-c",
        "//hs-msgpack-binary",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:base16-bytestring",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:cryptohash",
        "//third_party/haskell:hspec",
        "//third_party/haskell:saltine",
        "//third_party/haskell:vector",
    ],
)
