name:                 toxcore-c
synopsis:             Haskell bindings to the C reference implementation of Tox
version:              0.2.12
cabal-version:        >= 1.10
license:              GPL-3
license-file:         LICENSE
build-type:           Simple
author:               iphy
maintainer:           iphy
copyright:            Copyright (c) 2016-2020 The TokTok Team
homepage:             https://toktok.github.io
category:             Network
description:
  Haskell bindings to the C reference implementation of Tox.
  .
  See <https://github.com/TokTok/c-toxcore>.

source-repository head
  type: git
  location: https://github.com/TokTok/hs-toxcore-c

library
  default-language: Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  extra-libraries: toxcore
  exposed-modules:
      Network.Tox.C
      Network.Tox.C.CEnum
      Network.Tox.C.Constants
      Network.Tox.C.Options
      Network.Tox.C.Tox
      Network.Tox.C.Type
      Network.Tox.C.Version
      Network.Tox.Types.Events
  build-depends:
      base < 5
    , QuickCheck
    , bytestring
    , generic-arbitrary         < 2
    , msgpack-binary            >= 0.0.16
    , quickcheck-instances

executable groupbot
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
      -Wno-unused-imports
  extra-libraries: toxcore
  main-is: groupbot.hs
  build-depends:
      base                      < 5
    , base16-bytestring         >= 1
    , bytestring
    , directory
    , text
    , toxcore-c

executable gen-struct
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
      -Wno-unused-imports
  extra-libraries: toxcore
  main-is: gen-struct.hs
  build-depends:
      base                      < 5
    , bytestring
    , data-fix
    , groom
    , schema                    >= 0.0.3
    , toxcore-c

test-suite testsuite
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -Wall
      -Wno-unused-imports
  main-is: testsuite.hs
  other-modules:
      Network.Tox.C.ToxSpec
      Network.Tox.Types.EventsSpec
  build-depends:
      base                      < 5
    , QuickCheck                >= 2.9.1
    , base16-bytestring
    , bytestring
    , cryptohash
    , hspec
    , msgpack-binary
    , saltine
    , toxcore-c
    , vector
