name:                 toxcore
synopsis:             C bindings to the C reference implementation of Tox
version:              0.1.0
cabal-version:        >= 1.10
license:              AGPL-3
license-file:         LICENSE.md
build-type:           Simple
author:               iphy
maintainer:           iphy
copyright:            © 2016 iphy
homepage:             https://toktok.github.io
category:             Network

source-repository head
  type: git
  location: https://github.com/TokTok/libtox-haskell

library
  default-language: Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  extra-libraries: toxcore
  build-depends:
      base < 5
    , QuickCheck
    , bytestring
    , data-default-class
    , hstox
    , saltine
  exposed-modules:
      Network.Tox.C
      Network.Tox.C.Callbacks
      Network.Tox.C.CEnum
      Network.Tox.C.Tox

test-suite testsuite
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-depends:
      base < 5
    , QuickCheck
    , data-default-class
    , hspec
    , hstox
    , saltine
    , toxcore
  main-is: testsuite.hs
