load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "gen-struct",
    srcs = ["gen-struct.hs"],
    deps = [
        "//hs-schema",
        "//hs-toxcore-c",
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("data-fix"),
        hazel_library("groom"),
    ],
)

haskell_binary(
    name = "groupbot",
    srcs = ["groupbot.hs"],
    deps = [
        "//hs-toxcore-c",
        hazel_library("base"),
        hazel_library("base16-bytestring"),
        hazel_library("bytestring"),
        hazel_library("directory"),
        hazel_library("text"),
    ],
)
