load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "groupbot",
    srcs = ["groupbot.hs"],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        "//hs-toxcore-c",
        "//third_party/haskell:base",
        "//third_party/haskell:base16-bytestring",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:directory",
        "//third_party/haskell:text",
    ],
)
